--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Server Data Puller",
   "main": "index.js",
   "scripts": {
+    "start": "sucrase-node src/main/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Luan Hubner <luanhubner.pro@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
@@ -18,7 +20,12 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.2.0",
     "jest": "^27.5.1",
+    "sucrase": "^3.20.3",
     "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "express": "^4.17.3",
+    "node-scp": "^0.0.17"
   }
 }
